--- a/book/book.tex
+++ b/book/book.tex
@@ -7313,205 +7313,205 @@ Solución: \url{http://thinkpython2.com/code/cartalk3.py}.
 
 
 
-\chapter{Lists}
+\chapter{Listas}
 
-This chapter presents one of Python's most useful built-in types, lists.
-You will also learn more about objects and what can happen when you have
-more than one name for the same object.
+Este capítulo presenta uno de los tipos incorporados más útiles de Python: las listas.
+También aprenderás más sobre objetos y lo que puede ocurrir cuando tienes
+más de un nombre para el mismo objeto.
 
 
-\section{A list is a sequence}
+\section{Una lista es una secuencia}
 \label{sequence}
 
-Like a string, a {\bf list} is a sequence of values.  In a string, the
-values are characters; in a list, they can be any type.  The values in
-a list are called {\bf elements} or sometimes {\bf items}.
-\index{list}
-\index{type!list}
-\index{element}
-\index{sequence}
-\index{item}
+Al igual que una cadena, una {\bf lista} es una secuencia de valores.  En una cadena, los
+valores son caracteres; en una lista, pueden ser de cualquier tipo.  Los valores en
+una lista se llaman {\bf elementos} o a veces {\bf ítems}.
+\index{lista}
+\index{tipo!lista}
+\index{elemento}
+\index{secuencia}
+\index{ítem}
 
-There are several ways to create a new list; the simplest is to
-enclose the elements in square brackets (\verb"[" and \verb"]"):
+Hay varias maneras de crear una nueva lista; la más simple es
+encerrar los elementos en corchetes (\verb"[" y \verb"]"):
 
 \begin{verbatim}
 [10, 20, 30, 40]
 ['crunchy frog', 'ram bladder', 'lark vomit']
 \end{verbatim}
 %
-The first example is a list of four integers.  The second is a list of
-three strings.  The elements of a list don't have to be the same type.
-The following list contains a string, a float, an integer, and
-(lo!) another list:
+El primer ejemplo es una lista de cuatro enteros.  El segundo es una lista de
+tres cadenas.  Los elementos de una lista no tienen que ser del mismo tipo.
+La siguiente lista contiene una cadena, un número de coma flotante, un entero y
+(¡atención!) otra lista:
 
 \begin{verbatim}
 ['spam', 2.0, 5, [10, 20]]
 \end{verbatim}
 %
-A list within another list is {\bf nested}.
-\index{nested list}
-\index{list!nested}
+Una lista dentro de otra lista está {\bf anidada}.
+\index{lista anidada}
+\index{anidada!lista}
 
-A list that contains no elements is
-called an empty list; you can create one with empty
-brackets, \verb"[]".
-\index{empty list}
-\index{list!empty}
+Una lista que no contiene elementos se
+llama lista vacía; puedes crear una con corchetes
+vacíos, \verb"[]".
+\index{lista vacía}
+\index{vacía!lista}
 
-As you might expect, you can assign list values to variables:
+Como podrías esperar, puedes asignar valores de lista a variables:
 
 \begin{verbatim}
->>> cheeses = ['Cheddar', 'Edam', 'Gouda']
->>> numbers = [42, 123]
->>> empty = []
->>> print(cheeses, numbers, empty)
+>>> quesos = ['Cheddar', 'Edam', 'Gouda']
+>>> numeros = [42, 123]
+>>> vacio = []
+>>> print(quesos, numeros, vacio)
 ['Cheddar', 'Edam', 'Gouda'] [42, 123] []
 \end{verbatim}
 %
-\index{assignment}
+\index{asignación}
 
 
-\section{Lists are mutable}
+\section{Las listas son mutables}
 \label{mutable}
-\index{list!element}
-\index{access}
-\index{index}
-\index{bracket operator}
-\index{operator!bracket}
+\index{lista!elemento}
+\index{acceso}
+\index{índice}
+\index{operador corchetes}
+\index{corchetes!operador}
 
-The syntax for accessing the elements of a list is the same as for
-accessing the characters of a string---the bracket operator.  The
-expression inside the brackets specifies the index.  Remember that the
-indices start at 0:
+La sintaxis para acceder a los elementos de una lista es la misma que para
+acceder a los caracteres de una cadena---el operador corchetes.  La
+expresión dentro de los corchetes especifica el índice.  Recuerda que los
+índices comienzan en 0:
 
 \begin{verbatim}
->>> cheeses[0]
+>>> quesos[0]
 'Cheddar'
 \end{verbatim}
 %
-Unlike strings, lists are mutable.  When the bracket operator appears
-on the left side of an assignment, it identifies the element of the
-list that will be assigned.
-\index{mutability}
+A diferencia de las cadenas, las listas son mutables.  Cuando el operador corchetes aparece
+en el lado izquierdo de una asignación, este identifica el elemento de la
+lista que será asignado.
+\index{mutabilidad}
 
 \begin{verbatim}
->>> numbers = [42, 123]
->>> numbers[1] = 5
->>> numbers
+>>> numeros = [42, 123]
+>>> numeros[1] = 5
+>>> numeros
 [42, 5]
 \end{verbatim}
 %
-The one-eth element of {\tt numbers}, which
-used to be 123, is now 5.
-\index{index!starting at zero}
-\index{zero, index starting at}
+El uno-ésimo elemento de {\tt numeros}, que
+solía ser 123, ahora es 5.
+\index{índice!comenzando en cero}
+\index{cero, índice comenzando en}
 
-Figure~\ref{fig.liststate} shows
-the state diagram for {\tt
-cheeses}, {\tt numbers} and {\tt empty}:
-\index{state diagram}
-\index{diagram!state}
+La Figura~\ref{fig.liststate} muestra
+el diagrama de estado para {\tt
+quesos}, {\tt numeros} y {\tt vacio}:
+\index{diagrama de estado}
+\index{estado!diagrama de}
 
 \begin{figure}
 \centerline
 {\includegraphics[scale=0.8]{figs/liststate.pdf}}
-\caption{State diagram.}
+\caption{Diagrama de estado.}
 \label{fig.liststate}
 \end{figure}
 
-Lists are represented by boxes with the word ``list'' outside
-and the elements of the list inside.  {\tt cheeses} refers to
-a list with three elements indexed 0, 1 and 2.
-{\tt numbers} contains two elements; the diagram shows that the
-value of the second element has been reassigned from 123 to 5.
-{\tt empty} refers to a list with no elements.
-\index{item assignment}
-\index{assignment!item}
-\index{reassignment}
+Las listas se representan por cajas con la palabra ``lista'' por fuera
+y los elementos de la lista por dentro.  {\tt quesos} hace referencia a
+una lista con tres elementos con índices 0, 1 y 2.
+{\tt numeros} contiene dos elementos; el diagrama muestra que el
+valor del segundo elemento ha sido reasignado de 123 a 5.
+{\tt vacio} hace referencia a una lista sin elementos.
+\index{asignación de ítem}
+\index{ítem!asignación de}
+\index{reasignación}
 
-List indices work the same way as string indices:
+Los índices de las listas funcionan de la misma manera que los índices de las cadenas:
 
 \begin{itemize}
 
-\item Any integer expression can be used as an index.
+\item Cualquier expresión entera puede usarse como índice.
 
-\item If you try to read or write an element that does not exist, you
-get an {\tt IndexError}.
-\index{exception!IndexError}
+\item Si intentas leer o escribir un elemento que no existe,
+obtienes un {\tt IndexError}.
+\index{excepción IndexError}
 \index{IndexError}
 
-\item If an index has a negative value, it counts backward from the
-end of the list.
+\item Si un índice tiene un valor negativo, se cuenta hacia atrás desde el
+final de la lista.
 
 \end{itemize}
-\index{list!index}
+\index{lista!índice}
 
-\index{list!membership}
-\index{membership!list}
-\index{in operator}
-\index{operator!in}
+\index{lista!membership}
+\index{membership!lista}
+\index{operador in}
+\index{in!operador}
 
-The {\tt in} operator also works on lists.
+El operador {\tt in} también funciona en las listas.
 
 \begin{verbatim}
->>> cheeses = ['Cheddar', 'Edam', 'Gouda']
->>> 'Edam' in cheeses
+>>> quesos = ['Cheddar', 'Edam', 'Gouda']
+>>> 'Edam' in quesos
 True
->>> 'Brie' in cheeses
+>>> 'Brie' in quesos
 False
 \end{verbatim}
 
 
-\section{Traversing a list}
-\index{list!traversal}
-\index{traversal!list}
-\index{for loop}
-\index{loop!for}
-\index{statement!for}
+\section{Recorrer una lista}
+\index{recorrido!lista}
+\index{lista!recorrido}
+\index{bucle for}
+\index{for!bucle}
+\index{sentencia for}
 
-The most common way to traverse the elements of a list is
-with a {\tt for} loop.  The syntax is the same as for strings:
-
-\begin{verbatim}
-for cheese in cheeses:
-    print(cheese)
-\end{verbatim}
-%
-This works well if you only need to read the elements of the
-list.  But if you want to write or update the elements, you
-need the indices.  A common way to do that is to combine
-the built-in functions {\tt range} and {\tt len}:
-\index{looping!with indices}
-\index{index!looping with}
+La manera más común de recorrer los elementos de una lista es
+con un ciclo {\tt for}.  La sintaxis es la misma que para las cadenas:
 
 \begin{verbatim}
-for i in range(len(numbers)):
-    numbers[i] = numbers[i] * 2
+for queso in quesos:
+    print(queso)
 \end{verbatim}
 %
-This loop traverses the list and updates each element.  {\tt len}
-returns the number of elements in the list.  {\tt range} returns
-a list of indices from 0 to $n-1$, where $n$ is the length of
-the list.  Each time through the loop {\tt i} gets the index
-of the next element.  The assignment statement in the body uses
-{\tt i} to read the old value of the element and to assign the
-new value.
-\index{item update}
-\index{update!item}
+Esto funciona bien si solo necesitas leer los elementos de la
+lista.  Pero si quieres escribir o actualizar los elementos,
+necesitas los índices.  Una manera común de hacer eso es combinar
+las funciones incorporadas {\tt range} y {\tt len}:
+\index{bucle!con índices}
+\index{índice!bucle con}
 
-A {\tt for} loop over an empty list never runs the body:
+\begin{verbatim}
+for i in range(len(numeros)):
+    numeros[i] = numeros[i] * 2
+\end{verbatim}
+%
+Este bucle recorre la lista y actualiza cada elemento.  {\tt len}
+devuelve el número de elementos en la lista.  {\tt range} devuelve
+una lista de índices de 0 a $n-1$, donde $n$ es el largo de
+la lista.  Cada vez que se pasa por el bucle {\tt i} obtiene el índice
+del siguiente elemento.  La sentencia de asignación en el cuerpo usa
+{\tt i} para leer el valor antiguo del elemento y asignar el
+nuevo valor.
+\index{actualización de ítem}
+\index{ítem!actualización de}
+
+Un bucle {\tt for} a través de una lista vacía nunca ejecuta el cuerpo:
 
 \begin{verbatim}
 for x in []:
-    print('This never happens.')
+    print('Esto nunca ocurre.')
 \end{verbatim}
 %
-Although a list can contain another list, the nested
-list still counts as a single element.  The length of this list is
-four:
-\index{nested list}
-\index{list!nested}
+A pesar de que una lista puede contener otra lista, la lista
+anidada aún cuenta como un solo elemento.  La longitud de esta lista es
+cuatro:
+\index{lista anidada}
+\index{anidada!lista}
 
 \begin{verbatim}
 ['spam', 1, ['Brie', 'Roquefort', 'Pol le Veq'], [1, 2, 3]]
@@ -7519,12 +7519,12 @@ four:
 
 
 
-\section{List operations}
-\index{list!operation}
+\section{Operaciones de lista}
+\index{lista!operación}
 
-The {\tt +} operator concatenates lists:
-\index{concatenation!list}
-\index{list!concatenation}
+El operador {\tt +} concatena listas:
+\index{lista!concatenación}
+\index{concatenación!lista}
 
 \begin{verbatim}
 >>> a = [1, 2, 3]
@@ -7534,9 +7534,9 @@ The {\tt +} operator concatenates lists:
 [1, 2, 3, 4, 5, 6]
 \end{verbatim}
 %
-The {\tt *} operator repeats a list a given number of times:
-\index{repetition!list}
-\index{list!repetition}
+El operador {\tt *} repite una lista un número dado de veces:
+\index{repetición!lista}
+\index{lista!repetición}
 
 \begin{verbatim}
 >>> [0] * 4
@@ -7545,18 +7545,18 @@ The {\tt *} operator repeats a list a given number of times:
 [1, 2, 3, 1, 2, 3, 1, 2, 3]
 \end{verbatim}
 %
-The first example repeats {\tt [0]} four times.  The second example
-repeats the list {\tt [1, 2, 3]} three times.
+El primer ejemplo repite {\tt [0]} cuatro veces.  El segundo ejemplo
+repite la lista {\tt [1, 2, 3]} tres veces.
 
 
-\section{List slices}
-\index{slice operator}
-\index{operator!slice}
-\index{index!slice}
-\index{list!slice}
-\index{slice!list}
+\section{Trozos de lista}
+\index{operador de trozo}
+\index{trozo!operador de}
+\index{índice!trozo}
+\index{lista!trozo}
+\index{trozo!lista}\index{slice}
 
-The slice operator also works on lists:
+El operador de trozo también funciona en las listas:
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c', 'd', 'e', 'f']
@@ -7568,26 +7568,26 @@ The slice operator also works on lists:
 ['d', 'e', 'f']
 \end{verbatim}
 %
-If you omit the first index, the slice starts at the beginning.
-If you omit the second, the slice goes to the end.  So if you
-omit both, the slice is a copy of the whole list.
-\index{list!copy}
-\index{slice!copy}
-\index{copy!slice}
+Si omites el primer índice, el trozo comienza al principio.
+Si omites el segundo, el trozo llega al final.  Entonces si
+omites ambos, el trozo es una copia de la lista completa.
+\index{lista!copia}
+\index{trozo!copia}
+\index{copia!trozo}
 
 \begin{verbatim}
 >>> t[:]
 ['a', 'b', 'c', 'd', 'e', 'f']
 \end{verbatim}
 %
-Since lists are mutable, it is often useful to make a copy
-before performing operations that modify lists.
-\index{mutability}
+Dado que las listas son mutables, a menudo es útil crear una copia
+antes de realizar operacioines que modifiquen listas.
+\index{mutabilidad}
 
-A slice operator on the left side of an assignment
-can update multiple elements:
-\index{slice!update}
-\index{update!slice}
+Un operador de trozo en el lado izquierdo de una asignación
+puede actualizar múltiples elementos:
+\index{trozo!actualizar}\index{slice}
+\index{actualizar!trozo}
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c', 'd', 'e', 'f']
@@ -7623,14 +7623,14 @@ can update multiple elements:
 % with list methods.
 
 
-\section{List methods}
-\index{list!method}
-\index{method, list}
+\section{Métodos de lista}
+\index{lista!método de}
+\index{método de lista}
 
-Python provides methods that operate on lists.  For example,
-{\tt append} adds a new element to the end of a list:
-\index{append method}
-\index{method!append}
+Python proporciona métodos que operan en listas.  Por ejemplo,
+{\tt append} agrega un nuevo elemento al final de la lista:
+\index{método append}
+\index{append!método}
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c']
@@ -7639,10 +7639,10 @@ Python provides methods that operate on lists.  For example,
 ['a', 'b', 'c', 'd']
 \end{verbatim}
 %
-{\tt extend} takes a list as an argument and appends all of
-the elements:
-\index{extend method}
-\index{method!extend}
+{\tt extend} toma una lista como argumento y anexa todos
+los elementos:
+\index{método extend}
+\index{extend!método}
 
 \begin{verbatim}
 >>> t1 = ['a', 'b', 'c']
@@ -7652,11 +7652,11 @@ the elements:
 ['a', 'b', 'c', 'd', 'e']
 \end{verbatim}
 %
-This example leaves {\tt t2} unmodified.
+Este ejemplo deja a {\tt t2} sin modificar.
 
-{\tt sort} arranges the elements of the list from low to high:
-\index{sort method}
-\index{method!sort}
+{\tt sort} ordena los ejementos de la lista de menor a mayor:
+\index{método sort}
+\index{sort!método}
 
 \begin{verbatim}
 >>> t = ['d', 'c', 'e', 'b', 'a']
@@ -7665,56 +7665,56 @@ This example leaves {\tt t2} unmodified.
 ['a', 'b', 'c', 'd', 'e']
 \end{verbatim}
 %
-Most list methods are void; they modify the list and return {\tt None}.
-If you accidentally write {\tt t = t.sort()}, you will be disappointed
-with the result.
-\index{void method}
-\index{method!void}
-\index{None special value}
-\index{special value!None}
+La mayoría de los métodos de lista son nulos; modifican la lista y devuelven {\tt None}.
+Si por casualidad escribes {\tt t = t.sort()}, te decepcionará
+el resultado.
+\index{método nulo}
+\index{nulo!método}
+\index{valor especial None}
+\index{None!valor especial}
 
 
-\section{Map, filter and reduce}
+\section{Mapeo, filtro y reducción}
 \label{filter}
 
-To add up all the numbers in a list, you can use a loop like this:
+Para sumar todos los números de una lista, puedes usar un bucle como este:
 
 % see add.py
 
 \begin{verbatim}
-def add_all(t):
+def sumar_todos(t):
     total = 0
     for x in t:
         total += x
     return total
 \end{verbatim}
 %
-{\tt total} is initialized to 0.  Each time through the loop,
-{\tt x} gets one element from the list.  The {\tt +=} operator
-provides a short way to update a variable.  This
-{\bf augmented assignment statement},
-\index{update operator}
-\index{operator!update}
-\index{assignment!augmented}
-\index{augmented assignment}
+{\tt total} se inicializa en 0.  Cada vez que se pasa por el bucle,
+{\tt x} obtiene un elemento de la lista.  El operador {\tt +=}
+proporciona una manera corta de actualizar una variable.  Esta
+{\bf sentencia de asignación aumentada},
+\index{operador de actualización}
+\index{actualización!operador de}
+\index{aumentada!asignación}
+\index{asignación aumentada}
 
 \begin{verbatim}
     total += x
 \end{verbatim}
 %
-is equivalent to
+es equivalente a
 
 \begin{verbatim}
     total = total + x
 \end{verbatim}
 %
-As the loop runs, {\tt total} accumulates the sum of the
-elements; a variable used this way is sometimes called an
-{\bf accumulator}.
-\index{accumulator!sum}
+A medida que el bucle se ejecuta, {\tt total} acumula la suma de los
+elementos; una variable que se usa de esta manera a veces se llama
+{\bf acumulador}.
+\index{acumulador de suma}
 
-Adding up the elements of a list is such a common operation
-that Python provides it as a built-in function, {\tt sum}:
+Sumar los elementos de una lista es una operación tan común
+que Python la facilita como función incorporada, {\tt sum}:
 
 \begin{verbatim}
 >>> t = [1, 2, 3]
@@ -7722,44 +7722,44 @@ that Python provides it as a built-in function, {\tt sum}:
 6
 \end{verbatim}
 %
-An operation like this that combines a sequence of elements into
-a single value is sometimes called {\bf reduce}.
-\index{reduce pattern}
-\index{pattern!reduce}
-\index{traversal}
+Una operación como esta que combina una secuencia de elementos en
+un solo valor a veces se llama {\bf reducción}.
+\index{patrón de reducción}
+\index{reducción!patrón de}
+\index{recorrido}
 
-Sometimes you want to traverse one list while building
-another.  For example, the following function takes a list of strings
-and returns a new list that contains capitalized strings:
+A veces quieres recorrer una lista mientras construyes
+otra.  Por ejemplo, la siguiente función toma una lista de cadenas
+y devuelve una nueva lista que contiene cadenas que comienzan con mayúscula:
 
 \begin{verbatim}
-def capitalize_all(t):
+def todas_con_mayuscula(t):
     res = []
     for s in t:
         res.append(s.capitalize())
     return res
 \end{verbatim}
 %
-{\tt res} is initialized with an empty list; each time through
-the loop, we append the next element.  So {\tt res} is another
-kind of accumulator.
-\index{accumulator!list}
+{\tt res} se inicializa con una lista vacía; cada vez que se pasa por el bucle,
+anexamos el elemento siguiente.  Entonces {\tt res} es otro
+tipo de acumulador.
+\index{acumulador lista}
 
-An operation like \verb"capitalize_all" is sometimes called a {\bf
-map} because it ``maps'' a function (in this case the method {\tt
-capitalize}) onto each of the elements in a sequence.
-\index{map pattern}
-\index{pattern!map}
+Una operación como \verb"todas_con_mayuscula" a veces se llama {\bf
+mapeo} porque ``mapea'' una función (en este caso el método {\tt
+capitalize}) sobre cada uno de los elementos en una secuencia.
+\index{patrón de mapeo}
+\index{mapeo!patrón de}
 \index{filter pattern}
 \index{pattern!filter}
 
-Another common operation is to select some of the elements from
-a list and return a sublist.  For example, the following
-function takes a list of strings and returns a list that contains
-only the uppercase strings:
+Otra operación común es seleccionar algunos de los elementos de
+una lista y devolver una sublista.  Por ejemplo, la siguiente
+función toma una lista de cadenas y devuelve una lista que contiene
+solo las cadenas escritas con mayúsculas:
 
 \begin{verbatim}
-def only_upper(t):
+def solo_mayusculas(t):
     res = []
     for s in t:
         if s.isupper():
@@ -7767,25 +7767,25 @@ def only_upper(t):
     return res
 \end{verbatim}
 %
-{\tt isupper} is a string method that returns {\tt True} if
-the string contains only upper case letters.
+{\tt isupper} es un método de cadena que devuelve {\tt True} si
+la cadena solo contiene letras mayúsculas.
 
-An operation like \verb"only_upper" is called a {\bf filter} because
-it selects some of the elements and filters out the others.
+Una operación como \verb"solo_mayusculas" se llama {\bf filtro} porque
+selecciona algunos de los elementos y filtra los otros.
 
-Most common list operations can be expressed as a combination
-of map, filter and reduce.
+La mayoría de las operaciones de lista se pueden expresar como una combinación
+de mapeo, filtro y reducción.
 
 
-\section{Deleting elements}
-\index{element deletion}
-\index{deletion, element of list}
+\section{Eliminar elementos}
+\index{eliminación de elementos}
+\index{elemento!eliminación}
 
-There are several ways to delete elements from a list.  If you
-know the index of the element you want, you can use
+Hay varias maneras de eliminar elementos de una lista.  Si conoces
+el índice del elemento que quieres, puedes usar
 {\tt pop}:
-\index{pop method}
-\index{method!pop}
+\index{método pop}
+\index{pop!método}
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c']
@@ -7796,14 +7796,14 @@ know the index of the element you want, you can use
 'b'
 \end{verbatim}
 %
-{\tt pop} modifies the list and returns the element that was removed.
-If you don't provide an index, it deletes and returns the
-last element.
+{\tt pop} modifica la lista y devuelve el elemento que se eliminó.
+Si no entregas un índice, elimina y devuelve el
+último elemento.
 
-If you don't need the removed value, you can use the {\tt del}
-operator:
-\index{del operator}
-\index{operator!del}
+Si no necesitas el valor eliminado, puedes usar el
+operador {\tt del}:
+\index{operador del}
+\index{del!operador}
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c']
@@ -7812,10 +7812,10 @@ operator:
 ['a', 'c']
 \end{verbatim}
 %
-If you know the element you want to remove (but not the index), you
-can use {\tt remove}:
-\index{remove method}
-\index{method!remove}
+Si conoces el elemento que quieres eliminar (pero no el índice),
+puedes usar {\tt remove}:
+\index{método remove}
+\index{remove!método}
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c']
@@ -7824,12 +7824,12 @@ can use {\tt remove}:
 ['a', 'c']
 \end{verbatim}
 %
-The return value from {\tt remove} is {\tt None}.
-\index{None special value}
-\index{special value!None}
+El valor de retorno de {\tt remove} es {\tt None}.
+\index{valor especial None}
+\index{None!valor especial}
 
-To remove more than one element, you can use {\tt del} with
-a slice index:
+Para remover más de un elemento, puedes usar {\tt del} con
+índices de trozo:
 
 \begin{verbatim}
 >>> t = ['a', 'b', 'c', 'd', 'e', 'f']
@@ -7838,8 +7838,8 @@ a slice index:
 ['a', 'f']
 \end{verbatim}
 %
-As usual, the slice selects all the elements up to but not
-including the second index.
+Como siempre, el trozo selecciona todos los elementos hasta el segundo índice
+pero sin incluirlo.
 
 
 
